# 42AI_Piscine_Python

./: .editorconfig  .gitignore  README.md
AOC2021/d01/: a01.py  b01.py  refined01.py
AOC2021/d02/: d02.py  refined02.py
AOC2021/d03/: d03.py  refined03.py
AOC2021/d04/: better04.py  d04.py  refined04.py
AOC2021/d05/: d05.py
AOC2021/d06/: d06.py  refined06.py
AOC2021/d07/: d07.py  refined07.py
AOC2021/d08/: d08.py  refined08.py
AOC2021/d09/: d09.py
AOC2021/d10/: d10.py  refined10.py
AOC2021/d11/: d11.py
AOC2021/d12/: d12.py
AOC2021/d13/: d13.py
AOC2021/d14/: d14.py
AOC2021/d15/: d15.py
AOC2021/d16/: d16.py
AOC2021/d17/: d17.py
AOC2021/d18/: d18.py
M0/ex00/: Installation.md  answer.txt  requirements.txt
M0/ex01/: exec.py
M0/ex02/: whois.py
M0/ex03/: count.py
M0/ex04/: operations.py
M0/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
M0/ex06/: recipe.py
M0/ex07/: filterwords.py
M0/ex08/: sos.py
M0/ex09/: guess.py
M0/ex10/: loading.py  test.py
M1/ex00/: book.py  recipe.py  test.py
M1/ex01/: game.py  test.py
M1/ex02/: test.py  vector.py
M1/ex03/: generator.py  test.py
M1/ex04/: eval.py  test.py
M1/ex05/: banking_test1.py  banking_test2.py  test.py  the_bank.py
M2/ex00/: filter_test.py  ft_filter.py  ft_map.py  ft_reduce.py  map_test.py  reduce_test.py
M2/ex01/: main.py
M2/ex02/: logger.py
M2/ex03/: csvreader.py  reader.py
M2/ex04/: build.sh  setup.cfg
M2/ex04/setup/: README.md
M2/ex04/setup/my_minipack/: logger.py
M2/ex04/src/my_minipack/: progressbar.py
M3/ex00/: NumPyCreator.py  (+1 more)
(+9 files in other folders)
