[metadata]
name = my-minipack
version = 1.0.0
summary= Howto create a package in python.
author = aulopez
author_email = aulopez@student.42.fr
description = A small example package
license=MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AugustinLopez/42AI_Piscine_Python
project_urls =
    Bug Tracker = https://github.com/AugustinLopez/42AI_Piscine_Python/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.10

[options.packages.find]
where = src